--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
 
     <section>
       <h3 class="arrow"> New Task</h3>
-      <p class="tick"> Quarterly Newsletter <span class="bg-word">Editorial</span></p>
+      <p class="tick"> Quarterly Newsletter <span class="bg-blue">Editorial</span></p>
     </section>
     
     <section>
       <h3 class="arrow"> Today</h3>
-      <p class="tick"> Recruiting blog post <span class="bg-word">Editorial</span></p>
-      <p class="tick"> Mobile app launch <span class="bg-word">Q1 Goals</span></p>
-      <p class="cross"> Interview John H. <span class="bg-word">Recruiting</span></p>
-      <p class="tick"> Summit update to mobile storefronts <span class="bg-word">Mobile</span></p>
+      <p class="tick"> Recruiting blog post <span class="bg-blue">Editorial</span></p>
+      <p class="tick"> Mobile app launch <span class="bg-violet">Q1 Goals</span></p>
+      <p class="cross"> Interview John H. <span class="bg-green">Recruiting</span></p>
+      <p class="tick"> Summit update to mobile storefronts <span class="bg-orange">Mobile</span></p>
     </section>
 
     <section>
       <h3 class="arrow"> Upcoming</h3>
       <p class="cross"> Schedule meeting with Alex </p>
-      <p class="tick"> Homepage refresh <span class="bg-word">Website</span></p>
-      <p class="tick"> Onboard new Sales team members <span class="bg-word">Sales</span></p>
-      <p class="tick"> Review editorial calendar <span class="bg-word">Editorial</span></p>
+      <p class="tick"> Homepage refresh <span class="bg-pink">Website</span></p>
+      <p class="tick"> Onboard new Sales team members <span class="bg-lime">Sales</span></p>
+      <p class="tick"> Review editorial calendar <span class="bg-blue">Editorial</span></p>
     </section>
 
   </main>
